--- a/css/all.css
+++ b/css/all.css
@@ -1,4 +1,4 @@
-body {background-image:url('/../img/js.svg'); background-repeat:no-repeat; background-size:50%; font-size:14pt; font-family:"Times New Roman"; width:50%;}
+body {background-image:url('../img/js.svg'); background-repeat:no-repeat; background-size:50%; font-size:14pt; font-family:"Times New Roman"; width:50%;}
 header nav {display:flex; justify-content:space-around;}
 a:visited, a:link {color:purple; font-size:20pt; text-shadow:3px 1px 4px red; text-decoration:none; transition:color 1s; -moz-transition:color 1s; -o-transition:color 1s; -webit-transition:color 1s;}
 a:hover{color:white;}
